[package]
name = "ccelm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
clap = { version = "4.0.28", features = ["derive"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_yaml = "0.9.14"
log = "0.4.17"
pretty_env_logger = "0.4"
derivative = "2.2.0"
itertools = "0.10.5"

[dev-dependencies]
lazy_static = "1.4.0"
